--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
 body {
-margin: 0;
-padding: 0;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
+    max-width: 1480px;
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 html {
     scroll-behavior: smooth;
 }
@@ -17,6 +20,10 @@ nav {
     align-items: center;
     position: fixed;
     text-decoration: none;
+    max-width: 1480px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
 }
 
 nav .logo {
@@ -33,6 +40,10 @@ nav .logo {
     padding-right: 40px;
     padding-top: 90px;
     padding-bottom: 100px;
+    height: 100vh;
+    max-width: 1480px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .backgroud h1{
@@ -100,7 +111,6 @@ nav li:hover {
     margin-right: 50px;
 }
 
-
 .backgroud span {
     color: crimson;
 }
@@ -134,6 +144,7 @@ nav li:hover {
     padding-top: 80px;
     padding-bottom: 40px;
     background-color: #ecdada;
+
 }
 .electric_trucks, h2 {
     text-align: center;
@@ -144,6 +155,9 @@ nav li:hover {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    max-width: 1080px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .electricTruckTextAndSpecs {
@@ -225,6 +239,9 @@ nav li:hover {
     align-items: center;
     padding-left: 30px;
     padding-right: 30px;
+    max-width: 1080px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .electricBusesTextAndSpecs {
@@ -270,6 +287,9 @@ nav li:hover {
 .deals {
     padding-top: 80px;
     padding-bottom: 40px;
+    max-width: 1480px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .collection {
     display: flex;
@@ -335,6 +355,9 @@ nav li:hover {
     background-color: #222;
     margin-bottom: 12px;
     color: white;
+    max-width: 1480px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .footer a{
     text-decoration: none;
@@ -480,7 +503,7 @@ h3 {
         left: -150%;
         top: 0;
         background : black;
-        transition: all 0.3s ease;
+        transition: all 0.7s ease;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -493,14 +516,15 @@ h3 {
     .menu li {
         display: block;
         width: 100%;
-        margin-right: 50px;
+        margin-right: 0px;
     }
 
     .menu  li a {
         display: block;
-        margin: 20px 0;
+        margin: 10px 0;
         font-size: 25px;
         width: 100%;
+        margin-left: 0px;
     }
 
     .menu-btn {
