--- a/truck_details.css
+++ b/truck_details.css
@@ -1,5 +1,8 @@
 body {
-    margin: 0;
+    max-width: 1480px;
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
@@ -19,6 +22,10 @@ nav {
     align-items: center;
     position: fixed;
     text-decoration: none;
+    max-width: 1480px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
 }
 
 nav .logo {
